monticore-generator/src/test/resources/cocos/invalid/A4057/A4057b.mc4
package cocos.invalid.A4057;

grammar A4057b {

  symbol A = "Hello" name:Name*;
  
}